Resultados/Raony/tTunel/result_compilation.txt
tTunel.c: In function ‘CriaTunel’:
tTunel.c:14:46: error: expected ‘;’ before ‘return’
   14 |     AtualizaPosicao(tunel->acesso2, posicao2)
      |                                              ^
      |                                              ;
   15 |     return tunel;
      |     ~~~~~~                                    
tTunel.c:16:1: warning: control reaches end of non-void function [-Wreturn-type]
   16 | }
      | ^
